routing.tf
resource "aws_route_table" "fgtvmpublicrt" {
  vpc_id = aws_vpc.fgtvmvpc.id

  tags = {
    Name = "tf-fgtvm-public-rt"
  }
}

resource "aws_route_table" "fgtvmprivatert" {
  vpc_id = aws_vpc.fgtvmvpc.id

  tags = {
    Name = "tf-fgtvm-private-rt"
  }
}

resource "aws_route" "externalroute" {
  route_table_id         = aws_route_table.fgtvmpublicrt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.fgtvmigw.id
}

resource "aws_route" "internalroute" {
  depends_on             = [aws_instance.fgtvm]
  route_table_id         = aws_route_table.fgtvmprivatert.id
  destination_cidr_block = "0.0.0.0/0"
  network_interface_id   = aws_network_interface.eth1.id

}

resource "aws_route_table_association" "publicassociate" {
  subnet_id      = aws_subnet.publicsubnet.id
  route_table_id = aws_route_table.fgtvmpublicrt.id
}

resource "aws_route_table_association" "privateassociate" {
  subnet_id      = aws_subnet.privatesubnet.id
  route_table_id = aws_route_table.fgtvmprivatert.id
}

resource "aws_route_table_association" "app1associate" {
  subnet_id      = aws_subnet.appesubnet1.id
  route_table_id = aws_route_table.fgtvmprivatert.id
}

resource "aws_route_table_association" "app2associate" {
  subnet_id      = aws_subnet.appesubnet2.id
  route_table_id = aws_route_table.fgtvmprivatert.id
}
